# session-migration

./: CMakeLists.txt  session-migration.1
data/: CMakeLists.txt  session-migration.conf
debhelper/: dh_installmigrations  dh_migrations  migrations.pm
debian/: changelog  control  dh-migrations.install  session-migration.install
src/: CMakeLists.txt  session  session-migration.c
tests/: debhelper_tests.py  migration_tests.py
tests/data/main/: output_files
tests/data/main/session-migration/scripts/: 01_test.sh  02_test.sh  08_test.sh  10_test.sh
tests/data/melticecream/debian/: changelog  control  migrations  rules
